# CPPLogo

./: README.md
backend/: .gitignore  CMakeLists.txt
backend/src/: ast.cpp  ast.h  error.cpp  error.h  image.cpp  image.h  logo_error.cpp  logo_error.h  main.cpp  main.h  parse.cpp  parse.h  result.cpp  result.h  token.cpp  token.h  tokenizer.cpp  turtle.cpp  turtle.h
backend/src/utils/: types.h  utils.cpp  utils.h
